Update jre to java 11 image